--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@synet/kv",
-  "version": "1.0.0",
+  "version": "0.0.1-dev.3",
   "description": "Key-value storage with Unit Architecture",
   "type": "module",
   "main": "dist/index.js",
@@ -18,7 +18,7 @@
     "test": "vitest run",
     "dev:test": "vitest",
     "demo": "tsx demo/keyvalue-demo.ts",
-    "demo:redis": "tsx demo/kv-memory-demo.ts",
+    "demo:memory": "tsx demo/kv-memory-demo.ts",
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
     "coverage": "vitest run --coverage",
@@ -39,10 +39,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/node": "^22.15.31",
+    "@types/node": "^24.2.0",
     "@vitest/coverage-v8": "^3.1.3",
-    "typescript": "^5.8.3",
-    "vitest": "^3.2.3"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   },
   "keywords": [
     "Synet",
@@ -53,8 +53,6 @@
   "homepage": "https://synthetism.ai",
   "license": "MIT",
   "dependencies": {
-    "@keyv/redis": "^5.1.0",
-    "@synet/unit": "^1.0.6",
-    "keyv": "^5.5.0"
+    "@synet/unit": "^1.0.6"
   }
 }
