--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@synet/kv",
-  "version": "1.0.0",
+  "version": "1.0.1-dev.0",
   "description": "Key-value storage with Unit Architecture",
   "type": "module",
   "main": "dist/index.js",
@@ -53,6 +53,7 @@
   "homepage": "https://synthetism.ai",
   "license": "MIT",
   "dependencies": {
-    "@synet/unit": "^1.0.6"
+    "@synet/state": "^0.0.1-dev.3",
+    "@synet/unit": "^1.0.7-dev.1"
   }
 }
