--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@synet/kv",
-  "version": "1.0.1-dev.2",
+  "version": "1.0.1",
   "description": "Key-value storage with Unit Architecture",
   "type": "module",
   "main": "dist/index.js",
